maybe client and why server?